--- a/css/styles.css
+++ b/css/styles.css
@@ -663,4 +663,100 @@ button:after {
             box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   }
 }
+
+.app.dark {
+  background-color: #222;
+}
+
+.app.dark button {
+  background-color: #333;
+  background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.3)), to(#444444));
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.3) 0%, #444444 100%);
+  color: white;
+}
+
+.app.dark button:hover {
+  background: #0072f4;
+  -webkit-box-shadow: 0 10px 10px rgba(0, 114, 244, 0.3);
+          box-shadow: 0 10px 10px rgba(0, 114, 244, 0.3);
+  background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.1)), to(rgba(0, 114, 244, 0)));
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 114, 244, 0) 100%);
+}
+
+.app.dark .content .header h1 {
+  color: white;
+}
+
+.app.dark .weather-wrapper .weather-tools__header .header-title {
+  color: white;
+}
+
+.app.dark .weather-wrapper .weather-tools__header .header-date {
+  color: #ddd;
+}
+
+.app.dark .weather-wrapper .weather::-webkit-scrollbar-thumb {
+  background: #444;
+}
+
+.app.dark .weather-wrapper .weather .weather-day {
+  background-color: #444;
+}
+
+.app.dark .weather-wrapper .weather .weather-day .day-name,
+.app.dark .weather-wrapper .weather .weather-day .weather-description,
+.app.dark .weather-wrapper .weather .weather-day .temperature {
+  color: white;
+}
+
+.app.dark .clear {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(0), color-stop(0%, rgba(255, 145, 0, 0.4)), color-stop(25%, rgba(100, 100, 100, 0)), to(rgba(100, 100, 100, 0)));
+  background-image: linear-gradient(0, rgba(255, 145, 0, 0.4) 0%, rgba(100, 100, 100, 0) 25%, rgba(100, 100, 100, 0) 100%);
+  border-bottom: 3px solid #ff9100;
+}
+
+.app.dark .rain {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(0), color-stop(0%, rgba(48, 71, 202, 0.4)), color-stop(25%, rgba(100, 100, 100, 0)), to(rgba(100, 100, 100, 0)));
+  background-image: linear-gradient(0, rgba(48, 71, 202, 0.4) 0%, rgba(100, 100, 100, 0) 25%, rgba(100, 100, 100, 0) 100%);
+  border-bottom: 3px solid #3047ca;
+}
+
+.app.dark .clouds {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(0), color-stop(0%, rgba(102, 102, 102, 0.4)), color-stop(25%, rgba(255, 255, 255, 0)), to(rgba(255, 255, 255, 0)));
+  background-image: linear-gradient(0, rgba(102, 102, 102, 0.4) 0%, rgba(255, 255, 255, 0) 25%, rgba(255, 255, 255, 0) 100%);
+  border-bottom: 3px solid #6e6e6e;
+}
+
+.app.dark .news-section::-webkit-scrollbar-thumb {
+  background: #444;
+}
+
+.app.dark .news-section .news-element__description {
+  color: #b3b3b3;
+}
+
+.app.dark .news-section .news-element .news-element-title {
+  color: #dddddd;
+}
+
+.app.dark .news-section .news-element .author {
+  color: #b3b3b3;
+}
+
+.app.dark .time__display {
+  background-color: #444;
+}
+
+.app.dark .time__display .time-title,
+.app.dark .time__display .city {
+  color: #cacaca;
+}
+
+.app.dark .time__display .current-time {
+  color: white;
+}
+
+.app.dark .live__video {
+  background-color: #444;
+}
 /*# sourceMappingURL=styles.css.map */
